HTML: fix for collapse button below table header

--- a/sourcespec/html_report_template/style.css
+++ b/sourcespec/html_report_template/style.css
@@ -185,6 +185,7 @@ a.article:hover {
 
 #sidebarCollapse {
   position: fixed;
+  z-index: 10;
   top: 0;
   left: 250px;
   transition: all 0.3s;
